--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
